manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deploy
  labels:
    app.kubernetes.io/name: weather-app
    description: web_app_weather_dell_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: weather
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weather
    spec:
      containers:
      - name: weather-app-name
        image: 285484/weather-app:latest
        ports:
        - containerPort: 8080
