manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  labels:
    app: "weather-app"
    owner: "leha_vnuk"
spec:
  selector:
    app: "weather-app"
  ports:
    - name      : api-listener
      protocol  : TCP
      port      : 80
      targetPort: 5000
      nodePort  : 32000
  type: NodePort
